syntax = "proto3";

package redpanda.api.dataplane.v1;

enum ConfigSource {
  CONFIG_SOURCE_UNSPECIFIED = 0;
  CONFIG_SOURCE_DYNAMIC_TOPIC_CONFIG = 1;
  CONFIG_SOURCE_DYNAMIC_BROKER_CONFIG = 2;
  CONFIG_SOURCE_DYNAMIC_DEFAULT_BROKER_CONFIG = 3;
  CONFIG_SOURCE_STATIC_BROKER_CONFIG = 4;
  CONFIG_SOURCE_DEFAULT_CONFIG = 5;
  CONFIG_SOURCE_DYNAMIC_BROKER_LOGGER_CONFIG = 6;
}

enum ConfigType {
  CONFIG_TYPE_UNSPECIFIED = 0;
  CONFIG_TYPE_BOOLEAN = 1;
  CONFIG_TYPE_STRING = 2;
  CONFIG_TYPE_INT = 3;
  CONFIG_TYPE_SHORT = 4;
  CONFIG_TYPE_LONG = 5;
  CONFIG_TYPE_DOUBLE = 6;
  CONFIG_TYPE_LIST = 7;
  CONFIG_TYPE_CLASS = 8;
  CONFIG_TYPE_PASSWORD = 9;
}

message ConfigSynonym {
  string name = 1;
  optional string value = 2;
  ConfigSource source = 3;
}

enum ConfigAlterOperation {
  CONFIG_ALTER_OPERATION_UNSPECIFIED = 0;
  CONFIG_ALTER_OPERATION_SET = 1;
  CONFIG_ALTER_OPERATION_DELETE = 2;
  CONFIG_ALTER_OPERATION_APPEND = 3;
  CONFIG_ALTER_OPERATION_SUBTRACT = 4;
}
